--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
       </div>
       <!-- swiper Control -->
       <div class="swiperControl" data-aos="fade-up">
-        <!-- <div class="mainSliderPagination swiper-pagination"></div> -->
+        <!-- <div class="swiper-pagination"></div> -->
         <div class="swiperBtns">
-          <div class="mainSliderPrev swiper-button-prev"></div>
-          <div class="mainSliderNext swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
         </div>
       </div>
     </section>
@@ -124,7 +124,7 @@
           <span class="subtitle">Hand-Picked Category</span>
           <h4 class="title">Browse items by <span>category</span></h4>
         </div>
-        <div class="row" style="margin: -16px 0;">
+        <div class="row pt-3">
           <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
             <!-- category -->
             <a href="#!" class="category">
@@ -268,6 +268,230 @@
                 <img src="img/categories/icon (12).svg" alt="">
               </div>
             </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- -->
+    <section class="popular">
+      <div class="container">
+        <div class="topHead">
+          <div class="sectionTitle">
+            <span class="subtitle">popular</span>
+            <h4 class="title"> Trending <span> items </span></h4>
+          </div>
+          <!-- swiper Control -->
+          <div class="swiperControl">
+            <!-- <div class="swiper-pagination"></div> -->
+            <div class="swiperBtns">
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
+            </div>
+          </div>
+        </div>
+        <!-- slider -->
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <!-- item -->
+              <div class="item">
+                <a href="itemDetails.html" class="itemImg">
+                  <img src="img/listing/item (1).jpg" loading="lazy" alt="">
+                </a>
+                <div class="itemInfo">
+                  <a href="#!" class="advertiser"> <img src="img/users/user (1).png" loading="lazy" alt=""> </a>
+                  <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                  <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                  <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                    loaded with 8GB RAM and 256GB SSD.
+                  </p>
+                  <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <div class="itemBottom">
+                    <div class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt=""> </span>
+                      Electronics </div>
+                    <div class="price"> <span> $ 1,200 </span> </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <!-- item -->
+              <div class="item">
+                <a href="itemDetails.html" class="itemImg">
+                  <img src="img/listing/item (2).jpg" loading="lazy" alt="">
+                </a>
+                <div class="itemInfo">
+                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                  <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                  <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                    loaded with 8GB RAM and 256GB SSD.
+                  </p>
+                  <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <div class="itemBottom">
+                    <div class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt=""> </span>
+                      Electronics </div>
+                    <div class="price"> <span> $ 1,200 </span> </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <!-- item -->
+              <div class="item">
+                <a href="itemDetails.html" class="itemImg">
+                  <img src="img/listing/item (3).jpg" loading="lazy" alt="">
+                </a>
+                <div class="itemInfo">
+                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                  <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                  <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                    loaded with 8GB RAM and 256GB SSD.
+                  </p>
+                  <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <div class="itemBottom">
+                    <div class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt=""> </span>
+                      Electronics </div>
+                    <div class="price"> <span> $ 1,200 </span> </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <!-- item -->
+              <div class="item">
+                <a href="itemDetails.html" class="itemImg">
+                  <img src="img/listing/item (4).jpg" loading="lazy" alt="">
+                </a>
+                <div class="itemInfo">
+                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                  <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                  <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                    loaded with 8GB RAM and 256GB SSD.
+                  </p>
+                  <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <div class="itemBottom">
+                    <div class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt=""> </span>
+                      Electronics </div>
+                    <div class="price"> <span> $ 1,200 </span> </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <!-- item -->
+              <div class="item">
+                <a href="itemDetails.html" class="itemImg">
+                  <img src="img/listing/item (5).jpg" loading="lazy" alt="">
+                </a>
+                <div class="itemInfo">
+                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                  <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                  <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                    loaded with 8GB RAM and 256GB SSD.
+                  </p>
+                  <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <div class="itemBottom">
+                    <div class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt=""> </span>
+                      Electronics </div>
+                    <div class="price"> <span> $ 1,200 </span> </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <!-- item -->
+              <div class="item">
+                <a href="itemDetails.html" class="itemImg">
+                  <img src="img/listing/item (6).jpg" loading="lazy" alt="">
+                </a>
+                <div class="itemInfo">
+                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                  <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                  <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                    loaded with 8GB RAM and 256GB SSD.
+                  </p>
+                  <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <div class="itemBottom">
+                    <div class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt=""> </span>
+                      Electronics </div>
+                    <div class="price"> <span> $ 1,200 </span> </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <!-- item -->
+              <div class="item">
+                <a href="itemDetails.html" class="itemImg">
+                  <img src="img/listing/item (7).jpg" loading="lazy" alt="">
+                </a>
+                <div class="itemInfo">
+                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                  <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                  <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                    loaded with 8GB RAM and 256GB SSD.
+                  </p>
+                  <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <div class="itemBottom">
+                    <div class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt=""> </span>
+                      Electronics </div>
+                    <div class="price"> <span> $ 1,200 </span> </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <!-- item -->
+              <div class="item">
+                <a href="itemDetails.html" class="itemImg">
+                  <img src="img/listing/item (8).jpg" loading="lazy" alt="">
+                </a>
+                <div class="itemInfo">
+                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                  <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                  <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                    loaded with 8GB RAM and 256GB SSD.
+                  </p>
+                  <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <div class="itemBottom">
+                    <div class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt=""> </span>
+                      Electronics </div>
+                    <div class="price"> <span> $ 1,200 </span> </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <!-- item -->
+              <div class="item">
+                <a href="itemDetails.html" class="itemImg">
+                  <img src="img/listing/item (9).jpg" loading="lazy" alt="">
+                </a>
+                <div class="itemInfo">
+                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                  <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
+                  <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
+                    loaded with 8GB RAM and 256GB SSD.
+                  </p>
+                  <div class="location"> <img src="img/icons/location.svg" alt=""> <span> USA, California </span> </div>
+                  <div class="itemBottom">
+                    <div class="category"> <span class="img"> <img src="img/categories/icon (1).svg" alt=""> </span>
+                      Electronics </div>
+                    <div class="price"> <span> $ 1,200 </span> </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
