--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         </div>
       </div>
     </section>
-    <!-- -->
+    <!-- popular -->
     <section class="popular">
       <div class="container">
         <div class="topHead">
@@ -295,6 +295,7 @@
             <div class="swiper-slide">
               <!-- item -->
               <div class="item">
+                <button class="favorite active"> <img src="img/icons/heart.svg" alt=""> </button>
                 <a href="itemDetails.html" class="itemImg">
                   <img src="img/listing/item (1).jpg" loading="lazy" alt="">
                 </a>
@@ -312,12 +313,12 @@
                     <div class="price"> <span> $ 1,200 </span> </div>
                   </div>
                 </div>
-
               </div>
             </div>
             <div class="swiper-slide">
               <!-- item -->
               <div class="item">
+                <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
                 <a href="itemDetails.html" class="itemImg">
                   <img src="img/listing/item (2).jpg" loading="lazy" alt="">
                 </a>
@@ -340,11 +341,12 @@
             <div class="swiper-slide">
               <!-- item -->
               <div class="item">
+                <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
                 <a href="itemDetails.html" class="itemImg">
                   <img src="img/listing/item (3).jpg" loading="lazy" alt="">
                 </a>
                 <div class="itemInfo">
-                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <a href="#!" class="advertiser"> <img src="img/users/user (3).png" loading="lazy" alt=""> </a>
                   <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
                   <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
                   <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
@@ -362,11 +364,12 @@
             <div class="swiper-slide">
               <!-- item -->
               <div class="item">
+                <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
                 <a href="itemDetails.html" class="itemImg">
                   <img src="img/listing/item (4).jpg" loading="lazy" alt="">
                 </a>
                 <div class="itemInfo">
-                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <a href="#!" class="advertiser"> <img src="img/users/user (4).png" loading="lazy" alt=""> </a>
                   <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
                   <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
                   <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
@@ -384,11 +387,12 @@
             <div class="swiper-slide">
               <!-- item -->
               <div class="item">
+                <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
                 <a href="itemDetails.html" class="itemImg">
                   <img src="img/listing/item (5).jpg" loading="lazy" alt="">
                 </a>
                 <div class="itemInfo">
-                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <a href="#!" class="advertiser"> <img src="img/users/user (5).png" loading="lazy" alt=""> </a>
                   <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
                   <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
                   <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
@@ -406,11 +410,12 @@
             <div class="swiper-slide">
               <!-- item -->
               <div class="item">
+                <button class="favorite active"> <img src="img/icons/heart.svg" alt=""> </button>
                 <a href="itemDetails.html" class="itemImg">
                   <img src="img/listing/item (6).jpg" loading="lazy" alt="">
                 </a>
                 <div class="itemInfo">
-                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <a href="#!" class="advertiser"> <img src="img/users/user (6).png" loading="lazy" alt=""> </a>
                   <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
                   <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
                   <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
@@ -428,11 +433,12 @@
             <div class="swiper-slide">
               <!-- item -->
               <div class="item">
+                <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
                 <a href="itemDetails.html" class="itemImg">
                   <img src="img/listing/item (7).jpg" loading="lazy" alt="">
                 </a>
                 <div class="itemInfo">
-                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <a href="#!" class="advertiser"> <img src="img/users/user (7).png" loading="lazy" alt=""> </a>
                   <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
                   <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
                   <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
@@ -450,11 +456,12 @@
             <div class="swiper-slide">
               <!-- item -->
               <div class="item">
+                <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
                 <a href="itemDetails.html" class="itemImg">
                   <img src="img/listing/item (8).jpg" loading="lazy" alt="">
                 </a>
                 <div class="itemInfo">
-                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <a href="#!" class="advertiser"> <img src="img/users/user (8).png" loading="lazy" alt=""> </a>
                   <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
                   <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
                   <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
@@ -472,11 +479,12 @@
             <div class="swiper-slide">
               <!-- item -->
               <div class="item">
+                <button class="favorite"> <img src="img/icons/heart.svg" alt=""> </button>
                 <a href="itemDetails.html" class="itemImg">
                   <img src="img/listing/item (9).jpg" loading="lazy" alt="">
                 </a>
                 <div class="itemInfo">
-                  <a href="#!" class="advertiser"> <img src="img/users/user (2).png" loading="lazy" alt=""> </a>
+                  <a href="#!" class="advertiser"> <img src="img/users/user (9).png" loading="lazy" alt=""> </a>
                   <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
                   <a href="itemDetails.html" class="title"> Apple MacBook Air (2023) Apple M2 Chip </a>
                   <p class="description"> The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is
@@ -491,11 +499,11 @@
                 </div>
               </div>
             </div>
-
           </div>
         </div>
       </div>
     </section>
+    <!--  -->
   </content>
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
   <!--((((((((((((((((( / content )))))))))))))))))))-->
