--- a/index.html
+++ b/index.html
@@ -87,32 +87,30 @@
         <!-- swiper-slide -->
         <div class="swiper-slide">
           <a href="#!" class="viewContainer">
+            <img src="img/sliderImg1.jpg" alt="">
+          </a>
+        </div>
+        <!-- swiper-slide -->
+        <div class="swiper-slide">
+          <a href="#!" class="viewContainer">
+            <img src="img/sliderImg2.jpg" alt="">
+          </a>
+        </div>
+        <!-- swiper-slide -->
+        <div class="swiper-slide">
+          <a href="#!" class="viewContainer">
             <img src="img/sliderImg3.jpg" alt="">
-          </a>
-        </div>
-        <!-- swiper-slide -->
-        <div class="swiper-slide">
-          <a href="#!" class="viewContainer">
-            <img src="img/sliderImg2.jpeg" alt="">
-          </a>
-        </div>
-        <!-- swiper-slide -->
-        <div class="swiper-slide">
-          <a href="#!" class="viewContainer">
-            <video muted loop>
-              <source src="img/video.mp4" type="video/mp4">
-            </video>
           </a>
         </div>
       </div>
       </div>
       <!-- swiper Control -->
       <div class="swiperControl" data-aos="fade-up">
-        <!-- <div class="swiper-pagination"></div> -->
-        <div class="swiperBtns">
+        <div class="swiper-pagination"></div>
+        <!-- <div class="swiperBtns">
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- categories -->
