--- a/itemDetails.html
+++ b/itemDetails.html
@@ -77,7 +77,7 @@
     <section class="itemDetails">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 p-0 d-flex flex-column gap-3  p-md-2">
+          <div class="col-lg-8 d-flex flex-column gap-4 p-0 pb-3 p-md-2">
             <!-- itemDetailsSlider -->
             <div class="itemDetailsSlider">
               <!-- projectDetails Slider -->
@@ -162,7 +162,7 @@
                 </div>
               </div>
             </div>
-            <!-- item -->
+            <!-- priceInfo -->
             <div class="priceInfo">
               <div class="price"> <span> $1,200 </span> </div>
               <button class="favorite "> <img src="img/icons/heart.svg" alt=""> </button>
@@ -188,8 +188,17 @@
                 </div>
               </div>
             </div>
+            <!-- itemInfo -->
             <div class="itemInfo">
-              <h1 class="title"> Apple MacBook Air (2023) Apple M2 Chip </h1>
+              <h3 class="title"> Apple MacBook Air (2023) Apple M2 Chip </h3>
+              <!-- itemBottom -->
+              <div class="itemBottom">
+                <a href="#!" class="location"> <img src="img/icons/location.svg" alt="">
+                  <span> USA, California </span>
+                </a>
+                <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
+                <div class="views"> <img src="img/icons/eye.svg" alt=""> 1.2k </div>
+              </div>
               <p class="description">
                 The Apple MacBook Air 13.6-Inch laptop is powered by the new M2 chip. It is loaded with 8GB RAM and
                 256GB SSD. The MacBook Air features a brilliant Retina display, a FaceTime HD camera, and studio‑quality
@@ -204,15 +213,100 @@
                 <span> Firm price </span>
               </div>
             </div>
-            <div class="itemBottom">
-              <div class="location"> <img src="img/icons/location.svg" alt="">
-                <span> USA, California </span>
+
+            <!-- itemDetailsBox -->
+            <div class="itemDetailsBox">
+              <h4 class="title">Key Features</h4>
+              <ul>
+                <li>
+                  <span>MPN</span>
+                  <p> MLY33LL/A / MLY33ZP/A</p>
+                </li>
+                <li>
+                  <span>Model</span>
+                  <p> MacBook Air (2022) M2 Chip Model</p>
+                </li>
+                <li>
+                  <span>Processor</span>
+                  <p> Apple M2 chip, 8-core CPU with 4 performance cores and 4 efficiency cores</p>
+                </li>
+                <li>
+                  <span>RAM</span>
+                  <p> 8GB, Storage: 256GB SSD</p>
+                </li>
+                <li>
+                  <span>Display</span>
+                  <p> 13.6" Liquid Retina display (2560 x 1664)</p>
+                </li>
+                <li>
+                  <span>Features</span>
+                  <p> Backlit Magic Keyboard and the Touch ID</p>
+                </li>
+                <li>
+                  <span>Processor Brand</span>
+                  <p> Apple</p>
+                </li>
+                <li>
+                  <span>Processor Model</span>
+                  <p> M2 Chip</p>
+                </li>
+              </ul>
+            </div>
+            <!-- itemDetailsBox -->
+            <div class="itemDetailsBox">
+              <h4 class="title">Extra Features</h4>
+              <div class="features">
+
+                <span> Airbag </span>
+                <span> ABS </span>
+                <span> Air Condioning </span>
+                <span> AM/FM Radio </span>
+                <span> EBD </span>
+
               </div>
-              <div class="time"> <img src="img/icons/clock.svg" alt=""> 1h ago </div>
             </div>
           </div>
-          <div class="col-lg-4 p-0  p-md-2">
-            <a href="#!" class="advertiser"> <img src="img/users/user (1).png" loading="lazy" alt=""> </a>
+          <div class="col-lg-4 p-0 p-md-2">
+            <!-- advertiserDetails -->
+            <div class="advertiserDetails">
+              <a href="#!" class="advertiser">
+                <img src="img/users/user (1).png" loading="lazy" alt="">
+                <h3 class="name"> mahmoud elkomy </h3>
+              </a>
+              <span class="date"> Member S. Nov 24, 2020 </span>
+              <div class="contact">
+                <a href="#!" class="chat">
+                  <img src="img/icons/chat.svg" alt="">
+                  <span> chat </span>
+                </a>
+                <a href="#!" class="call">
+                  <img src="img/icons/call.svg" alt="">
+                  <span> call </span>
+                </a>
+              </div>
+
+            </div>
+
+            <!-- itemDetailsBox -->
+            <div class="itemDetailsBox safety">
+              <h4 class="title"> Your safety matters to us </h4>
+              <ul>
+                <li>
+                  <p> Meet the seller in a public place such as the metro, malls, or gas stations </p>
+                </li>
+                <li>
+                  <p> Take someone with you when you go to meet the seller or buyer </p>
+                </li>
+                <li>
+                  <p> Inspect the product carefully before you buy and make sure that its price is appropriate </p>
+                </li>
+                <li>
+                  <p> Do not pay or transfer money unless you have inspected the product properly </p>
+                </li>
+
+              </ul>
+            </div>
+
           </div>
         </div>
       </div>
