--- a/itemDetails.html
+++ b/itemDetails.html
@@ -77,7 +77,7 @@
     <section class="itemDetails">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 d-flex flex-column gap-4 p-0 pb-3 p-md-2">
+          <div class="col-lg-8 d-flex flex-column gap-4 p-0 pb-3 p-md-3">
             <!-- itemDetailsSlider -->
             <div class="itemDetailsSlider">
               <!-- projectDetails Slider -->
@@ -266,7 +266,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 p-0 p-md-2">
+          <div class="col-lg-4 p-0 p-md-3">
             <!-- advertiserDetails -->
             <div class="advertiserDetails">
               <a href="#!" class="advertiser">
@@ -288,7 +288,7 @@
             </div>
 
             <!-- itemDetailsBox -->
-            <div class="itemDetailsBox safety">
+            <div class="itemDetailsBox">
               <h4 class="title"> Your safety matters to us </h4>
               <ul>
                 <li>
