--- a/itemDetails.html
+++ b/itemDetails.html
@@ -74,6 +74,18 @@
   <!--((((((((((((((((((( content )))))))))))))))))))-->
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
   <content>
+    <!-- banner -->
+    <section class="banner">
+      <div class="container">
+        <div class="links">
+          <a href="index.html"> Home </a>
+          <a href="categories.html"> categories </a>
+          <a href="#!" class="active"> Details </a>
+        </div>
+        <!-- <h2> Details </h2> -->
+      </div>
+    </section>
+    <!-- itemDetails -->
     <section class="itemDetails">
       <div class="container">
         <div class="row">
