--- a/listing.html
+++ b/listing.html
@@ -85,158 +85,98 @@
         <!-- <h2> categories </h2> -->
       </div>
     </section>
+    <!-- explore -->
+    <section class="explore">
+      <div class="container p-0">
+        <div class="row m-0">
+          <div class="col-lg-3 col-md-4 p-2 filter" id="filter">
+            <button class="closeFilter" id="closefilter">
+              <img src="img/icons/close.svg" alt="">
+            </button>
+            <aside class="asideFilter">
+              <div class="accordion" id="filterList">
+                <div class="accordion-item">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    Category
+                  </button>
+                  <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#filterList">
+                    <div class="accordion-body">
+                      <!-- option -->
+                      <div class="option">
+                        <label for="option1"> <img src="img/categories/icon (1).svg" alt=""> Mobile & Tablets </label>
+                        <input type="radio" name="categories" value="" id="option1" />
+                      </div>
+                      <!-- option -->
+                      <div class="option">
+                        <label for="option2"> <img src="img/categories/icon (2).svg" alt=""> Vehicles </label>
+                        <input type="radio" name="categories" value="" id="option2" />
+                      </div>
+                      <!-- option -->
+                      <div class="option">
+                        <label for="option3"> <img src="img/categories/icon (3).svg" alt=""> Electronics </label>
+                        <input type="radio" name="categories" value="" id="option3" />
+                      </div>
+                      <!-- option -->
+                      <div class="option">
+                        <label for="option4"> <img src="img/categories/icon (4).svg" alt=""> Home & Garden </label>
+                        <input type="radio" name="categories" value="" id="option4" />
+                      </div>
+                      <!-- option -->
+                      <div class="option">
+                        <label for="option5"> <img src="img/categories/icon (5).svg" alt=""> Jobs </label>
+                        <input type="radio" name="categories" value="" id="option5" />
+                      </div>
 
-    <!-- categories -->
-    <section class="categories py-2">
-      <div class="container">
-        <div class="row pt-3">
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
-            <!-- category -->
-            <a href="#!" class="category">
-              <div class="text">
-                <h5 class="title"> Mobile & Tablets </h5>
-                <span>15,000 ads</span>
+
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Brand & Model
+                  </button>
+                  <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#filterList">
+                    <div class="accordion-body">
+
+                      <!-- option -->
+                      <div class="option">
+                        <label for="option6"> <img src="img/categories/icon (6).svg" alt=""> Apple </label>
+                        <input type="radio" name="brands" value="" id="option6" />
+                      </div>
+                      <!-- option -->
+                      <div class="option">
+                        <label for="option7"> <img src="img/categories/icon (7).svg" alt=""> Samsung </label> 
+                        <input type="radio" name="brands" value="" id="option7" />
+                      </div>
+                      <!-- option -->
+                      <div class="option">
+                        <label for="option8"> <img src="img/categories/icon (8).svg" alt=""> Nokia </label>
+                        <input type="radio" name="brands" value="" id="option8" />
+                      </div>
+
+
+                    </div>
+                  </div>
+                </div>
+
               </div>
-              <div class="icon">
-                <img src="img/categories/icon (1).svg" alt="">
-              </div>
-            </a>
+            </aside>
           </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
-            <!-- category -->
-            <a href="#!" class="category">
-              <div class="text">
-                <h5 class="title"> Vehicles </h5>
-                <span>15,000 ads</span>
-              </div>
-              <div class="icon">
-                <img src="img/categories/icon (2).svg" alt="">
-              </div>
-            </a>
-          </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
-            <!-- category -->
-            <a href="#!" class="category">
-              <div class="text">
-                <h5 class="title"> Properties </h5>
-                <span>15,000 ads</span>
-              </div>
-              <div class="icon">
-                <img src="img/categories/icon (3).svg" alt="">
-              </div>
-            </a>
-          </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
-            <!-- category -->
-            <a href="#!" class="category">
-              <div class="text">
-                <h5 class="title"> Jobs </h5>
-                <span>15,000 ads</span>
-              </div>
-              <div class="icon">
-                <img src="img/categories/icon (4).svg" alt="">
-              </div>
-            </a>
-          </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
-            <!-- category -->
-            <a href="#!" class="category">
-              <div class="text">
-                <h5 class="title"> Kids & Babies </h5>
-                <span>15,000 ads</span>
-              </div>
-              <div class="icon">
-                <img src="img/categories/icon (5).svg" alt="">
-              </div>
-            </a>
-          </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
-            <!-- category -->
-            <a href="#!" class="category">
-              <div class="text">
-                <h5 class="title"> Hoppies </h5>
-                <span>15,000 ads</span>
-              </div>
-              <div class="icon">
-                <img src="img/categories/icon (6).svg" alt="">
-              </div>
-            </a>
-          </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
-            <!-- category -->
-            <a href="#!" class="category">
-              <div class="text">
-                <h5 class="title"> Pets </h5>
-                <span>15,000 ads</span>
-              </div>
-              <div class="icon">
-                <img src="img/categories/icon (7).svg" alt="">
-              </div>
-            </a>
-          </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
-            <!-- category -->
-            <a href="#!" class="category">
-              <div class="text">
-                <h5 class="title"> Furniture & Decor </h5>
-                <span>15,000 ads</span>
-              </div>
-              <div class="icon">
-                <img src="img/categories/icon (8).svg" alt="">
-              </div>
-            </a>
-          </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
-            <!-- category -->
-            <a href="#!" class="category">
-              <div class="text">
-                <h5 class="title"> Fashion & Beauty </h5>
-                <span>15,000 ads</span>
-              </div>
-              <div class="icon">
-                <img src="img/categories/icon (9).svg" alt="">
-              </div>
-            </a>
-          </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
-            <!-- category -->
-            <a href="#!" class="category">
-              <div class="text">
-                <h5 class="title"> Electronics & Appliances </h5>
-                <span>15,000 ads</span>
-              </div>
-              <div class="icon">
-                <img src="img/categories/icon (10).svg" alt="">
-              </div>
-            </a>
-          </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
-            <!-- category -->
-            <a href="#!" class="category">
-              <div class="text">
-                <h5 class="title"> Businesses & Industrial </h5>
-                <span>15,000 ads</span>
-              </div>
-              <div class="icon">
-                <img src="img/categories/icon (11).svg" alt="">
-              </div>
-            </a>
-          </div>
-          <div class="col-6 col-md-4 col-xl-3 p-2 p-xl-3">
-            <!-- category -->
-            <a href="#!" class="category">
-              <div class="text">
-                <h5 class="title"> Services </h5>
-                <span>15,000 ads</span>
-              </div>
-              <div class="icon">
-                <img src="img/categories/icon (12).svg" alt="">
-              </div>
-            </a>
+          <div class="col-lg-9 col-md-8 p-2">
+            <h5 class="sortBy" id="openfilter">
+              <img src="img/icons/sort.svg" alt="">
+              Sort By
+            </h5>
+
+
+
           </div>
         </div>
       </div>
     </section>
+
   </content>
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
   <!--((((((((((((((((( / content )))))))))))))))))))-->
@@ -323,6 +263,17 @@
   <!-- main -->
   <script src="js/main.js"></script>
   <script src="js/custom.js"></script>
+  <script>
+    let openFilter = document.getElementById("openfilter");
+    let closeFilter = document.getElementById("closefilter");
+    let filter = document.getElementById("filter");
+    openfilter.addEventListener("click", () => {
+      filter.classList.add("active");
+    });
+    closefilter.addEventListener("click", () => {
+      filter.classList.remove("active");
+    });
+  </script>
 </body>
 
 </html>
