--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           </a>
           <a class="navLink" href="index.html"> Home </a>
           <a class="navLink" href="categories.html"> categories </a>
+          <a class="navLink" href="listing.html"> listing </a>
           <a class="navLink" href="posts.html"> Posts </a>
           <a class="navLink" href="chats.html"> Chats </a>
           <a class="navLink" href="contactUs.html"> contact us </a>
