--- a/itemDetails.html
+++ b/itemDetails.html
@@ -44,6 +44,7 @@
           </a>
           <a class="navLink" href="index.html"> Home </a>
           <a class="navLink" href="categories.html"> categories </a>
+          <a class="navLink" href="listing.html"> listing </a>
           <a class="navLink" href="posts.html"> Posts </a>
           <a class="navLink" href="chats.html"> Chats </a>
           <a class="navLink" href="contactUs.html"> contact us </a>
@@ -337,6 +338,7 @@
         <div class=" p-1 d-flex flex-wrap justify-content-center gap-3 my-3">
           <a class="text-capitalize fw-bold" href="index.html"> Home </a>
           <a class="text-capitalize fw-bold" href="categories.html"> categories </a>
+          <a class="text-capitalize fw-bold" href="listing.html"> listing </a>
           <a class="text-capitalize fw-bold" href="posts.html"> Posts </a>
           <a class="text-capitalize fw-bold" href="chats.html"> Chats </a>
           <a class="text-capitalize fw-bold" href="contactUs.html"> contact us </a>
