--- a/listing.html
+++ b/listing.html
@@ -104,6 +104,11 @@
                     <div class="accordion-body">
                       <!-- option -->
                       <div class="option">
+                        <label for="option0"> <img src="img/fav.svg" alt=""> All </label>
+                        <input type="radio" checked name="categories" value="" id="option0" />
+                      </div>
+                      <!-- option -->
+                      <div class="option">
                         <label for="option1"> <img src="img/categories/icon (1).svg" alt=""> Mobile & Tablets </label>
                         <input type="radio" name="categories" value="" id="option1" />
                       </div>
@@ -127,8 +132,6 @@
                         <label for="option5"> <img src="img/categories/icon (5).svg" alt=""> Jobs </label>
                         <input type="radio" name="categories" value="" id="option5" />
                       </div>
-
-
                     </div>
                   </div>
                 </div>
@@ -139,28 +142,89 @@
                   </button>
                   <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#filterList">
                     <div class="accordion-body">
-
                       <!-- option -->
                       <div class="option">
-                        <label for="option6"> <img src="img/categories/icon (6).svg" alt=""> Apple </label>
-                        <input type="radio" name="brands" value="" id="option6" />
+                        <label for="option6"> Apple </label>
+                        <input type="checkbox" value="" id="option6" />
                       </div>
                       <!-- option -->
                       <div class="option">
-                        <label for="option7"> <img src="img/categories/icon (7).svg" alt=""> Samsung </label> 
-                        <input type="radio" name="brands" value="" id="option7" />
+                        <label for="option7"> Samsung </label>
+                        <input type="checkbox" value="" id="option7" />
                       </div>
                       <!-- option -->
                       <div class="option">
-                        <label for="option8"> <img src="img/categories/icon (8).svg" alt=""> Nokia </label>
-                        <input type="radio" name="brands" value="" id="option8" />
+                        <label for="option8"> Nokia </label>
+                        <input type="checkbox" value="" id="option8" />
                       </div>
-
-
                     </div>
                   </div>
                 </div>
-
+                <div class="accordion-item">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                    Location
+                  </button>
+                  <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#filterList">
+                    <div class="accordion-body">
+                      <!-- option -->
+                      <div class="option">
+                        <label for="locationOption0">  All </label>
+                        <input type="radio" checked name="categories" value="" id="locationOption0" />
+                      </div>
+                      <!-- option -->
+                      <div class="option">
+                        <label for="locationOption1">  New York </label>
+                        <input type="radio" name="categories" value="" id="locationOption1" />
+                      </div>
+                      <!-- option -->
+                      <div class="option">
+                        <label for="locationOption2">  London </label>
+                        <input type="radio" name="categories" value="" id="locationOption2" />  
+                      </div>
+                      <!-- option -->
+                      <div class="option">
+                        <label for="locationOption3">  Paris </label>
+                        <input type="radio" name="categories" value="" id="locationOption3" />  
+                      </div>
+                      <!-- option -->
+                      <div class="option">
+                        <label for="locationOption4">  Shanghai </label>
+                        <input type="radio" name="categories" value="" id="locationOption4" />
+                      </div>
+                  
+                      
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    Price
+                  </button>
+                  <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#filterList">
+                    <div class="accordion-body">
+                      <div class="priceRange">
+                        <div class="from">
+                          <label for="from">From</label>
+                          <div class="input-group">
+                            <span class="input-group-text" id="addon1">$</span>
+                            <input type="number" class="form-control" id="from" value="0" placeholder="min price"
+                              aria-describedby="addon1">
+                          </div>
+                        </div>
+                        <div class="to">
+                          <label for="to">To</label>
+                          <div class="input-group">
+                            <span class="input-group-text" id="addon2">$</span>
+                            <input type="number" class="form-control" id="to" value="99999" placeholder="max price"
+                              aria-describedby="addon2">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </aside>
           </div>
@@ -169,14 +233,10 @@
               <img src="img/icons/sort.svg" alt="">
               Sort By
             </h5>
-
-
-
           </div>
         </div>
       </div>
     </section>
-
   </content>
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
   <!--((((((((((((((((( / content )))))))))))))))))))-->
